<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginPrimaryDark"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/colorLoginPrimaryDark"
    android:scrollbarThumbVertical="@color/colorLoginPrimaryDark"
    tools:context="com.ps.petappfe.LoginActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="299dp"
        android:layout_height="202dp"
        android:layout_marginLeft="70dp"
    android:src="@drawable/catdog" />

    <TextView
        android:id="@+id/createnewac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:fontFamily="monospace"
        android:text="LOGIN!"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textAlignment="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />



    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="130dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textColor="@android:color/white" />



        <TextView
            android:id="@+id/toCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>